# GenAI-app-template

./: .coverage  .gitignore  README.md  cookiecutter.json  main.py  pyproject.toml
.github/instructions/: Python code.instructions.md
assets/templates/prompts/: example.md
docs/audits/: provider-conformance-audit.md
genai-application-template/: README.md  pyproject.toml
genai-application-template/src/domain/llm/: __init__.py  constants.py  protocols.py  types.py
genai-application-template/src/domain/prompt/: types.py
genai-application-template/tests/infrastructure/llm/: test_factory.py
hooks/: post_gen_project.py  pre_gen_project.py
src/application/e2e/: chat_app_service.py  rag_app_service.py
src/application/services/chat/: __init__.py  base.py  langchain.py
src/application/services/rag/: __init__.py  base.py
src/domain/chat/: __init__.py  protocols.py  types.py
src/domain/embedding/: __init__.py  constants.py  protocols.py  types.py
src/domain/llm/: __init__.py  constants.py  types.py
src/domain/vector/: __init__.py  constants.py  protocols.py  types.py
src/infrastructure/: __init__.py  utils.py
src/infrastructure/embedding/: base.py
src/infrastructure/embedding/adapters/: __init__.py  azure_openai.py  bedrock.py  cohere.py  gemini.py  grok.py  ollama.py  openai.py  voyageai.py
src/infrastructure/llm/: __init__.py  factory.py
src/infrastructure/llm/adapters/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  gemini.py  grok.py  ollama.py  openai.py
src/infrastructure/prompt/repositories/: __init__.py  base.py
src/infrastructure/prompt/storage/: __init__.py  base.py
src/infrastructure/vector/: __init__.py  base.py  factory.py
src/infrastructure/vector/adapters/: __init__.py  cosmos_db.py  milvus_db.py  mongo_db.py  opensearch_db.py  pinecone_db.py  qdrant_db.py  vertex_db.py
tests/: conftest.py
tests/application/e2e/: test_chat_app_service.py  test_rag_app_service.py
tests/application/services/chat/: test_base.py  test_langchain.py
tests/application/services/rag/: test_base.py
tests/infrastructure/embedding/: test_base.py
tests/infrastructure/embedding/providers/: test_azure_openai.py  test_bedrock.py  test_cohere.py  test_gemini.py  test_grok.py  test_ollama.py  test_openai.py  test_voyageai.py
tests/infrastructure/llm/: test_base.py  test_factory.py
tests/infrastructure/llm/providers/: test_anthropic.py  test_bedrock.py  (+5 more)
tests/infrastructure/vector/: test_base.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/application/e2e/: chat_app_service.py  rag_app_service.py
{{ cookiecutter.project_slug }}/src/application/services/chat/: __init__.py  base.py  langchain.py
{{ cookiecutter.project_slug }}/src/application/services/rag/: __init__.py  base.py
{{ cookiecutter.project_slug }}/src/domain/chat/: __init__.py  protocols.py  types.py
{{ cookiecutter.project_slug }}/src/domain/embedding/: __init__.py  constants.py  types.py
{{ cookiecutter.project_slug }}/src/domain/llm/: __init__.py  constants.py  types.py
{{ cookiecutter.project_slug }}/src/domain/prompt/: protocols.py
{{ cookiecutter.project_slug }}/src/domain/vector/: __init__.py  constants.py  protocols.py  types.py
{{ cookiecutter.project_slug }}/src/infrastructure/: utils.py
{{ cookiecutter.project_slug }}/src/infrastructure/embedding/: __init__.py  factory.py
{{ cookiecutter.project_slug }}/src/infrastructure/embedding/adapters/: __init__.py  azure_openai.py  bedrock.py  cohere.py  gemini.py  grok.py  ollama.py  openai.py  voyageai.py
{{ cookiecutter.project_slug }}/src/infrastructure/llm/: __init__.py  base.py  factory.py
{{ cookiecutter.project_slug }}/src/infrastructure/llm/adapters/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  gemini.py  grok.py  ollama.py  openai.py
{{ cookiecutter.project_slug }}/src/infrastructure/prompt/repositories/: base.py
{{ cookiecutter.project_slug }}/src/infrastructure/prompt/repositories/adapters/: langchain.py
{{ cookiecutter.project_slug }}/src/infrastructure/vector/: __init__.py  base.py  factory.py
{{ cookiecutter.project_slug }}/src/infrastructure/vector/adapters/: __init__.py  cosmos_db.py  milvus_db.py  mongo_db.py  opensearch_db.py  pinecone_db.py  qdrant_db.py  vertex_db.py
{{ cookiecutter.project_slug }}/tests/application/e2e/: test_chat_app_service.py  test_rag_app_service.py
{{ cookiecutter.project_slug }}/tests/application/services/chat/: test_base.py  test_langchain.py
{{ cookiecutter.project_slug }}/tests/application/services/rag/: test_base.py
{{ cookiecutter.project_slug }}/tests/infrastructure/embedding/: test_factory.py
{{ cookiecutter.project_slug }}/tests/infrastructure/embedding/providers/: test_azure_openai.py  test_bedrock.py  test_cohere.py  test_gemini.py  test_grok.py  test_ollama.py  test_openai.py  test_voyageai.py
{{ cookiecutter.project_slug }}/tests/infrastructure/llm/: test_base.py
{{ cookiecutter.project_slug }}/tests/infrastructure/llm/providers/: test_anthropic.py  test_azure_openai.py  test_bedrock.py  test_gemini.py  test_grok.py  test_ollama.py  test_openai.py
{{ cookiecutter.project_slug }}/tests/infrastructure/prompt/repositories/adapters/: test_langchain.py
{{ cookiecutter.project_slug }}/tests/infrastructure/prompt/storage/adapters/: test_local.py
{{ cookiecutter.project_slug }}/tests/infrastructure/vector/: test_base.py
{{ cookiecutter.project_slug }}/tests/infrastructure/vector/adapters/: _shared.py  test_cosmos_db.py  test_milvus_db.py  test_mongo_db.py  test_opensearch_db.py  test_pinecone_db.py  test_qdrant_db.py  test_vector_operations.py  test_vertex_db.py
(+28 files in other folders)
