[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.3.1",
    "langchain-aws>=1.2.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-xai>=1.2.1",
    "pre-commit>=4.5.1",
]
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.poe.env]
PYTHONPATH = "${POE_ROOT}"

[tool.poe.tasks]
test = { cmd = "uv run pytest --ignore=src", help = "Run tests" }
coverage = { cmd = "uv run pytest --cov=src --cov-report=term-missing", help = "Run tests with coverage report" }
format = { cmd = "uv run black .", help = "Format code using black" }
lint = { cmd = "uv run flake8 src", help = "Analyze code using flake8" }
isort = { cmd = "uv run isort .", help = "Sort imports using isort" }
style = { sequence = ["isort", "format", "lint"], help = "Sort imports, format code, and run linter" }
clean = { "shell" = "python -c \"import pathlib; [ [p.unlink() if p.is_file() else __import__('shutil').rmtree(p) for p in pathlib.Path('.').rglob(mask)] for mask in ('__pycache__', '*.pyc', '*.pyo', '.pytest_cache', '.coverage') ]\"", help = "Remove python cache files and build artifacts" }

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
skip_empty = true

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
ignore = ['E203','E266']
max-line-length = 100
count = true
