[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.0",
    "typing-extensions>=4.12.0",
{% if "1" in cookiecutter.llm_providers %}    "langchain-anthropic>=1.3.1",
{% endif %}{% if "2" in cookiecutter.llm_providers or "7" in cookiecutter.llm_providers %}    "langchain-openai>=1.1.7",
{% endif %}{% if "3" in cookiecutter.llm_providers %}    "langchain-aws>=1.2.1",
{% endif %}{% if "4" in cookiecutter.llm_providers %}    "langchain-google-genai>=4.2.0",
{% endif %}{% if "5" in cookiecutter.llm_providers %}    "langchain-xai>=1.2.1",
{% endif %}{% if "6" in cookiecutter.llm_providers %}    "langchain-ollama>=1.0.1",
{% endif %}{% if "1" in cookiecutter.vector_db %}    "azure-cosmos>=4.15.0",
{% endif %}{% if "2" in cookiecutter.vector_db %}    "pymilvus>=2.6.10",
{% endif %}{% if "3" in cookiecutter.vector_db %}    "pymongo>=4.16.0",
{% endif %}{% if "4" in cookiecutter.vector_db %}    "opensearch-py>=2.8.0",
{% endif %}{% if "5" in cookiecutter.vector_db %}    "pinecone>=8.1.0",
{% endif %}{% if "6" in cookiecutter.vector_db %}    "qdrant-client>=1.17.0",
{% endif %}{% if "7" in cookiecutter.vector_db %}    "google-cloud-aiplatform>=1.141.0",
{% endif %}{% if "rag" in cookiecutter.services %}    "splitter-mr[markitdown]",
{% if "1" in cookiecutter.embedding_providers or "5" in cookiecutter.embedding_providers or "7" in cookiecutter.embedding_providers %}    "langchain-openai>=1.1.7",
{% endif %}{% if "2" in cookiecutter.embedding_providers %}    "langchain-aws>=1.2.1",
{% endif %}{% if "3" in cookiecutter.embedding_providers %}    "langchain-cohere>=0.5.1",
{% endif %}{% if "4" in cookiecutter.embedding_providers %}    "langchain-google-genai>=4.2.0",
{% endif %}{% if "6" in cookiecutter.embedding_providers %}    "langchain-ollama>=1.0.1",
{% endif %}{% if "8" in cookiecutter.embedding_providers %}    "langchain-voyageai>=0.3.0",
{% endif %}{% endif %}]
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.poe.env]
PYTHONPATH = "${POE_ROOT}"

[tool.poe.tasks]
test = { cmd = "uv run pytest --ignore=src", help = "Run tests" }
coverage = { cmd = "uv run pytest --cov=src --cov-report=term-missing", help = "Run tests with coverage report" }
format = { cmd = "uv run black .", help = "Format code using black" }
lint = { cmd = "uv run flake8 src", help = "Analyze code using flake8" }
isort = { cmd = "uv run isort .", help = "Sort imports using isort" }
style = { sequence = ["isort", "format", "lint"], help = "Sort imports, format code, and run linter" }
clean = { "shell" = "python -c \"import pathlib; [ [p.unlink() if p.is_file() else __import__('shutil').rmtree(p) for p in pathlib.Path('.').rglob(mask)] for mask in ('__pycache__', '*.pyc', '*.pyo', '.pytest_cache', '.coverage') ]\"", help = "Remove python cache files and build artifacts" }

[tool.poe.tasks.install]
sequence = [
    { cmd = "uv sync --group dev" },
    { cmd = "uv run pre-commit install" },
]
help = "Install project and dev dependencies, then pre-commit git hooks"

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
skip_empty = true

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
ignore = ['E203','E266']
max-line-length = 100
count = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
